# scriptrs

./: .gitignore  Cargo.toml  README.md  justfile
dev-tools/: Cargo.toml  justfile
dev-tools/python/: benchmark_encoder_variants.py  compare_coreml.py  export_models.py
examples/: inspect_coreml_compute.rs  transcribe_wav.rs
src/: config.rs  constants.rs  coreml.rs  decode.rs  error.rs  frontend.rs  lib.rs  long_form.rs  model.rs  models.rs  pipeline.rs  types.rs  vocab.rs
src/coreml/: array.rs  runtime.rs
src/long_form/: merge.rs  planner.rs  vad.rs
