[package]
name = "scriptrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
exclude = ["fixtures/", "dev-tools/"]
authors = ["Praveen Perera"]
description = "Rust transcription with native CoreML Parakeet v2 inference"
license = "Apache-2.0"
repository = "https://github.com/avencera/scriptrs"
homepage = "https://github.com/avencera/scriptrs"
documentation = "https://docs.rs/scriptrs"
readme = "README.md"
keywords = ["asr", "transcription", "speech", "coreml", "macos"]

[features]
default = ["online"]
online = ["dep:hf-hub", "hf-hub/ureq", "hf-hub/native-tls"]
long-form = []
long-form-vad = ["long-form"]

[dependencies]
hf-hub = { version = "0.5", optional = true, default-features = false }
ndarray = "0.17.2"
realfft = "3.5.0"
thiserror = "2.0.18"
tracing = "0.1.44"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-core-ml = { version = "0.3", features = [
    "MLAllComputeDevices",
    "MLCPUComputeDevice",
    "MLComputeDeviceProtocol",
    "MLComputePlan",
    "MLComputePlanDeviceUsage",
    "MLModel",
    "MLMultiArray",
    "MLModelConfiguration",
    "MLDictionaryFeatureProvider",
    "MLFeatureValue",
    "MLFeatureProvider",
    "MLGPUComputeDevice",
    "MLModelStructure",
    "MLModelStructureNeuralNetwork",
    "MLModelStructurePipeline",
    "MLModelStructureProgram",
    "MLModelStructureProgramBlock",
    "MLModelStructureProgramFunction",
    "MLModelStructureProgramOperation",
    "MLModel_MLComputeDevice",
    "MLNeuralEngineComputeDevice",
    "alloc",
    "block2",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSDictionary",
    "NSError",
    "NSObject",
    "NSString",
    "NSURL",
    "NSValue",
    "NSSet",
    "NSEnumerator",
    "NSObjCRuntime",
] }

[dev-dependencies]
approx = "0.5.1"
eyre = "0.6.12"
hound = "3.5.1"
tempfile = "3.23.0"
